<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Smart Power Control</string>
    <string name="app_name_desc">Have full control over your switchable network outlets. At the moment switchable network outlets from ANEL-Elektronik AG (www.anel-elektronik.de) are supported: NET-PwrCtrl HUT, NET-PwrCtrl IO, NET-PwrCtrl ADV, NET-PwrCtrl PRO, NET-PwrCtrl HOME</string>
    <string name="shortcut_new_scene">New Power-Control scene</string>
    <string name="shortcut_new_scene_desc">Create a scene for your home screen</string>
    <string name="shortcut_existing_executable">Existing Power-Control scene</string>
    <string name="shortcut_existing_executable_desc">Start an existing scene from your home screen</string>
    <string name="app_name_widget">Power-Control Outlet State</string>
    <string name="app_name_widget_group">Power-Control Group State</string>
    <string name="changelog_title">What\'s New</string>
    <string name="device_connections_edit">Edit network connections</string>
    <string name="delete_device">Delete Device</string>
    <string name="delete_all_devices">Delete all devices</string>
    <string name="save">Save</string>
    <string name="error_reading_devices">Error reading configured devices</string>
    <string name="error_sending_inquiry">Error sending inquiry packet to %1$s</string>
    <string name="error_sending_broadcast_inquiry">Error sending broadcast inquiry packet on port %d</string>
    <string name="error_packet_received">Device reports an error</string>
    <string name="error_nopass">Invalid username / password combination</string>
    <string name="error_listen_thread_exception">Could not listen on port %d:\n</string>
    <string name="error_port_lt_1024">(ports &lt; 1024 only possible on rooted devices)</string>
    <string name="error_setting_outlet">No answer from the device %1$s. Last seen: %2$d seconds ago</string>
    <string name="device_test">Test</string>
    <string name="device_name">Name</string>
    <string name="device_ip">Hostname or IP</string>
    <string name="device_send_udp_port">UDP port for sending</string>
    <string name="device_receive_udp_port">UDP port for receiving</string>
    <string name="device_username">Username</string>
    <string name="device_password">Password</string>
    <string name="device_add">Add device…</string>
    <string name="scene_add">Add scene…</string>
    <string name="remove_all">Delete all</string>
    <string name="refresh">Refresh</string>
    <string name="default_device_name">New device</string>
    <string name="confirmation_delete_device">Are you sure you really want to delete this device?</string>
    <string name="confirmation_delete_all_devices">Are you sure you want to delete all devices?</string>
    <string name="title_shortcut">Create Shortcut</string>
    <string name="title_scene_create">Create scene</string>
    <string name="title_scene_edit">Edit scene</string>
    <string name="shortcut_show_mainwindow">Show mainwindow on execution</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="toggle">Toggle</string>
    <string name="drawer_overview">Overview</string>
    <string name="drawer_overview_list">View as list</string>
    <string name="drawer_overview_grid">View as grid</string>
    <string name="drawer_overview_compact">Compact view</string>
    <string name="drawer_donate">Donate</string>
    <string name="show_hidden">Show hidden</string>
    <string name="hide_hidden">Hide hidden</string>
    <string name="menu_hide_outlet">Hide</string>
    <string name="menu_unhide_outlet">Unhide</string>
    <string name="menu_rename_outlet">Rename</string>
    <string name="outlet_rename_title">Rename outlet</string>
    <string name="outlet_rename_message">Rename this outlet. The new name will be stored on the anel device.</string>
    <string name="error_shortcut_not_valid">Shortcut not valid!</string>
    <string name="device_save_without_test">Your configuration is not tested. Testing before saving is recommended. Should I save nevertheless?</string>
    <string name="Version">Version:</string>
    <string name="scene_copy_homescreen">Add copy to homescreen</string>
    <string name="scene_link_homescreen">Add link to homescreen</string>
    <string name="error_reading_scenes">Error reading scenes</string>
    <string name="device_test_not_reachable">Test reachable failed</string>
    <string name="error_device_no_access">Test access failed</string>
    <string name="device_test_ok">Test OK</string>
    <string name="menu_switch_all_on">All on</string>
    <string name="menu_switch_all_off">All off</string>
    <string name="menu_switch_all_toogle">All toggle</string>
    <string name="menu_switch_all_ignore">Remove all from scene</string>
    <string name="menu_help">Help</string>
    <string name="menu_device_external_configuration_page">External configuration page</string>
    <string name="device_not_reachable">Devices %1$s not reachable</string>
    <string name="empty_no_scenes">No scene found.\n\n
A scene combines multiple actions and execute them at once.</string>
    <string name="empty_no_outlets">All your outlets are out of range or associated with a group.\n\nSwipe left to configure new devices and swipe right to change the current group.</string>
    <string name="empty_no_devices">There were no devices found by the automatic device search.\n\n
Please double check that you are in the same network as your devices, UDP on the devices is activated and the network ports in the preferences are correct.\n\nAlternatively use the (+) icon located in the top-left bar to manually enter device data.</string>
    <string name="devices_refreshed">Found %1$d known and %2$d unknown devices on this network</string>
    <string name="error_not_in_range">Destination network %1$s not in range</string>
    <string name="scene_executed">Scene %1$s executed</string>
    <string name="shortcut_enable_feedback">Notification on execution</string>
    <string name="preference_use_dark_theme">Dark theme</string>
    <string name="preference_use_dark_theme_summary">Switch between dark and light theme.</string>
    <string name="error_plugin_failed">Plugin failed: %1$s</string>
    <string name="preference_load_extensions">Allow extensions</string>
    <string name="preference_load_extensions_summary">Show controls from supported applications in this app.</string>
    <string name="error_widget_needs_configuration">Configuration necessary</string>
    <string name="widget_outlet_not_reachable">(not reachable)</string>
    <string name="error_timeout_device">Execution: Timeout for device %1$s</string>
    <string name="pref_widgets">Widgets</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report is send to my developer now to help fix the issue!</string>
    <string name="scene_rename">Scene name</string>
    <string name="new_devices">New devices</string>
    <string name="devices">Change to Devices screen</string>
    <string name="preferences">Change to Preferences screen</string>
    <string name="scene_set_name">Set name</string>
    <string name="scene_set_icon">Set icon</string>
    <string name="dialog_icon_title">Picture selection</string>
    <string name="dialog_icon_default">Default</string>
    <string name="dialog_icon_select">Select file…</string>
    <string name="error_icon">Failed to set icon</string>
    <string name="scene_create_include_onepane">No actions so far! Swipe the screen to the right to unveil available actions. Click on one of them to add it to the scene.</string>
    <string name="scene_create_include_twopane">No actions so far! Click on one of the right actions to add it to the scene.</string>
    <string name="error_scene_no_actions">No actions defined. Saving disabled!</string>
    <string name="error_scene_no_name">No name set. Saving disabled!</string>
    <string name="scene_create_helptext_available">No more actions. You already have used all available or there are no one available.</string>
    <string name="error_reading_groups">Reading groups failed</string>
    <string name="widget_on">(On)</string>
    <string name="widget_off">(Off)</string>
    <string name="preference_widget_show_title">Show title</string>
    <string name="preference_widget_show_title_summary">Show the name below the widgets icon</string>
    <string name="preference_widget_show_status">Show status</string>
    <string name="preference_widget_show_status_summary">Show the status (on/off) below the widgets icon</string>
    <string name="device_createGroup">Create group with device outlets</string>
    <string name="menu_outlet_createGroup">Groups</string>
    <string name="confirmation_device_createGroup">Create a group for all actions of this device? If a group has been created before for this device, that group will be replaced.</string>
    <string name="group_add">Create group…</string>
    <string name="outlet_added_to_groups">Belong to %1$d groups</string>
    <string name="outlet_to_group_title">Groups of %1$s</string>
    <string name="group_create_dialog_title">Enter a name for the new group please.</string>
    <string name="empty_group">This group is empty. Either no items belong to this group anymore or relevant devices are not in range at the moment.</string>
    <string name="menu_remove_group">Remove group</string>
    <string name="menu_rename_group">Rename group</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="menu_outlet_master_slave">Master for…</string>
    <string name="device_udp">UDP Connections</string>
    <string name="device_http">HTTP Connections</string>
    <string name="device_name_summary">The name of this device for the overview list. The name is not relevant for the connection to the device.</string>
    <string name="device_username_summary">Your user name. You may setup up to eight user names with different access rights on the website of the device.</string>
    <string name="device_password_summary">Your password. The password will be send in clear-text over the network!</string>
    <string name="alarm_device_name">Outlet</string>
    <string name="alarm_device_name_summary">Please choose the target for this alarm</string>
    <string name="alarm_type_weekdays">Weekdays</string>
    <string name="alarm_type_absolute">One-time alarm</string>
    <string name="alarm_type_absolute_summary">A one time alarm need a fixed date!</string>
    <string name="alarm_start_time">On time</string>
    <string name="alarm_stop_time">Off time</string>
    <string name="alarm_start_time_summary">Either on or off time. Depends on the type of alarm.</string>
    <string name="alarm_date">Alarm date</string>
    <string name="device_enabled">Device enabled</string>
    <string name="device_enabled_summary">A deactivated device is like a non reachable device and will not see any updates</string>
    <string name="device_http_new">New HTTP Connection</string>
    <string name="device_http_new_summary">HTTP is slower than UDP but is more reliable for an internet connected device</string>
    <string name="alarm_enabled">Alarm enabled</string>
    <string name="scene_nfc_write">Write NFC Tag</string>
    <string name="outlets_view_type_list">As list</string>
    <string name="outlets_view_type_compact">Kompakte Ansicht</string>
    <string name="outlets_view_type_extended">Erweiterte Ansicht</string>
    <string name="icon_theme_1">Rund, Transparent</string>
    <string name="icon_theme_2">Rund, Flach</string>
    <string name="icon_theme_3">Rund, Dreidimensional</string>
    <string name="icon_theme_4">Farbiges Powerzeichen</string>
    <string name="menu_device_share">Share device to network</string>
    <string name="menu_device_hide_items">Hide/show entries</string>
    <string name="scene_options_title">Options</string>
    <string name="icon_theme">Icon Theme</string>
</resources>