<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_device_configure"
        android:title="@string/device_connections_edit" />
    <item
        android:id="@+id/menu_device_configuration_page"
        android:title="@string/menu_device_configuration_page" />
    <item
        android:id="@+id/menu_device_hide_items"
        android:title="@string/menu_device_hide_items" />

    <item
        android:id="@+id/menu_device_createGroup"
        android:title="@string/device_createGroup" />

    <item
        android:id="@+id/menu_device_share"
        android:title="@string/menu_device_share" />

    <item
        android:id="@+id/menu_device_delete"
        android:title="@string/delete_device" />

</menu>