<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_switch_all_on"
        android:title="@string/menu_switch_all_on"
        android:showAsAction="collapseActionView|withText" />

    <item
        android:id="@+id/menu_switch_all_off"
        android:title="@string/menu_switch_all_off"
        android:showAsAction="collapseActionView|withText" />

    <item
        android:id="@+id/menu_switch_all_toogle"
        android:title="@string/menu_switch_all_toogle"
        android:showAsAction="collapseActionView|withText" />

    <item
        android:id="@+id/menu_switch_all_ignore"
        android:title="@string/menu_switch_all_ignore"
        android:showAsAction="collapseActionView|withText" />
</menu>