<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_devices"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/devices"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_device_hide_items"
        android:title="@string/menu_device_hide_items"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/drawer_feedback"
        app:showAsAction="never" />
</menu>