<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_switch_all_off"
        android:icon="@android:drawable/button_onoff_indicator_off"
        android:showAsAction="ifRoom"
        android:title="@string/menu_switch_all_off" />

    <item
        android:id="@+id/menu_switch_all_on"
        android:icon="@android:drawable/button_onoff_indicator_on"
        android:showAsAction="ifRoom"
        android:title="@string/menu_switch_all_on" />

    <item
        android:id="@+id/menu_switch_all_toogle"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="ifRoom"
        android:title="@string/menu_switch_all_toogle" />

    <item
        android:id="@+id/menu_switch_all_ignore"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/menu_switch_all_ignore" />
</menu>