<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/list_inner_padding">

    <Switch
        android:id="@+id/shortcut_show_mainwindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/shortcut_show_mainwindow"
        android:visibility="gone" />

    <Switch
        android:id="@+id/shortcut_enable_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/shortcut_enable_feedback" />

    <Button
        android:id="@+id/btnIcon"
        style="?colored_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/scene_set_icon" />

    <Button
        android:id="@+id/btnName"
        style="?colored_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/scene_set_name" />

    <Button
        android:id="@+id/btnNFC"
        style="?colored_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/scene_nfc_write" />

    <Button
        android:id="@+id/btnSceneFavourite"
        style="?colored_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/btnSceneAddHomescreen"
        style="?colored_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/scene_add_homescreen" />

</LinearLayout>