<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/options_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/list_outer_padding"
    card_view:cardBackgroundColor="?cards_background"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_inner_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:text="@string/scene_options_title"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <CheckBox
            android:id="@+id/shortcut_show_mainwindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/shortcut_show_mainwindow"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/shortcut_enable_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/shortcut_enable_feedback" />

        <Button
            android:id="@+id/btnNFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/scene_nfc_write" />

        <Button
            android:id="@+id/btnSceneAddHomescreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/scene_add_homescreen" />

    </LinearLayout>

</android.support.v7.widget.CardView>
