<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/options_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/list_outer_padding"
    card_view:cardBackgroundColor="?cards_background"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_inner_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:text="@string/scene_options_title"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <com.rey.material.widget.CheckBox
            android:id="@+id/shortcut_show_mainwindow"
            style="@style/CheckBoxDrawable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/shortcut_show_mainwindow"
            android:visibility="gone" />

        <com.rey.material.widget.CheckBox
            android:id="@+id/shortcut_enable_feedback"
            style="@style/CheckBoxDrawable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/shortcut_enable_feedback" />

        <com.rey.material.widget.CheckBox
            android:id="@+id/chk_hide"
            style="@style/CheckBoxDrawable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/menu_hide_outlet" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNFC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/scene_nfc_write" />

            <Button
                android:id="@+id/btnSceneAddHomescreen"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/scene_add_homescreen" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
