<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/list_outer_padding"
        android:paddingRight="@dimen/list_outer_padding">

        <oly.netpowerctrl.ui.SoftRadioButton
            android:id="@+id/design1"
            group="style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outlets_view_type_list" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list1"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_below="@id/design1"
            android:layout_marginLeft="10dp" />

        <oly.netpowerctrl.ui.SoftRadioButton
            android:id="@+id/design2"
            group="style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list1"
            android:text="@string/outlets_view_type_extended" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list2"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_below="@id/design2"
            android:layout_marginLeft="10dp" />

        <oly.netpowerctrl.ui.SoftRadioButton
            android:id="@+id/design3"
            group="style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list2"
            android:text="@string/outlets_view_type_compact" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list3"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_below="@id/design3"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>
</ScrollView>